# gitforge

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build-binaries.yml  build.yml  publish-cargo.yml  publish-npm.yml  publish-pypi.yml  release-tag.yml
src/: main.rs
src/commands/: add.rs  list.rs  mod.rs  preview.rs
src/commands/gitignore/: add.rs  list.rs  mod.rs  preview.rs
src/commands/issue/: add.rs  list.rs  mod.rs  preview.rs
src/commands/license/: add.rs  list.rs  mod.rs  preview.rs
src/commands/pr/: add.rs  list.rs  mod.rs  preview.rs
src/utils/: cache.rs  remote.rs
tests/integration/: gitignore_tests.rs  issue_tests.rs  license_tests.rs  pr_tests.rs
